# Hermes-Managed-Browser

./: .gitignore  Dockerfile  README.md  camofox.config.json  leboncoin-resale.config.json  package.json  plugin.ts  server.js  tsconfig.json
docs/: browser-control-policy.md  human-behavior.md  human-session-recorder.md  leboncoin-resale-rules.md  managed-browser-job-queue.md
grafana/: jo-browser-failures.json
lib/: action-context.js  agent-history-memory.js  browser-display-mode.js  browser-persona.js  camoufox-launch-profile.js  config.js  credentials-vault.js  dom-signature-repair.js  fingerprint-coherence.js  metrics.js  (+27 more)
server/: README.md  pyproject.toml  requirements.txt  server.py
server/camofox/: __init__.py
server/camofox/api/: admin.py  legacy.py  managed.py  memory.py  notifications.py  sessions.py  tabs.py  vnc.py
server/camofox/core/: __init__.py  app.py  auth.py  browser.py  config.py  engines.py  metrics.py  plugins.py  session.py  utils.py
server/camofox/domain/: actions.py  fingerprint.py  jobs.py  memory_store.py  notifications_store.py  persona.py  profile.py  proxy.py  replay.py  snapshot.py  vnc.py
server/camofox/managed/: __init__.py  leases.py  profiles.py
server/docs/: ARCHITECTURE.md
server/tests/: conftest.py
server/tests/integration/: test_cloak_browser.py  test_managed_memory_replay.py  test_server.py
server/tests/unit/: test_actions.py  test_engines.py  test_managed_profiles_leases.py  test_managed_runtime_routes.py  test_persistence_memory.py  test_proxy.py  test_snapshot.py  test_utils.py  test_vnc.py  test_vnc_api.py
(+129 files in other folders)
