[project]
name = "managed-browser"
version = "2.0.0"
description = "Managed Browser Python backend with multi-engine support"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.11",
    "browserforge>=0.13.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "playwright>=1.49.0",
    "cloakbrowser>=0.3.26",
    "prometheus-client>=0.21.0",
    "httptools>=0.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
